# jobs

./: .gitignore  README.md  pyproject.toml  setup.sh
config/: settings.toml
config/companies/: apple.toml  broadcom.toml  google.toml  meta.toml  nvidia.toml  openai.toml
migrations/: 001_initial.sql  002_discovery_ids.sql
scripts/: create-transfer-bundle.sh  install-launchd.sh  jobs-monitor  scheduled-run  setup.sh  test.sh  uninstall-launchd.sh
src/job_monitor/: __init__.py  archive.py  backup.py  cli.py  config.py  exporting.py  hashing.py  health.py  http.py  locking.py  models.py  pipeline.py  refresh.py  reporting.py  retention.py  text.py
src/job_monitor/adapters/: __init__.py  apple.py  base.py  google.py  meta.py  openai.py  workday.py
src/job_monitor/filters/: __init__.py  employment.py  location.py
src/job_monitor/storage/: __init__.py  database.py
tests/: test_apple_adapter.py  test_backup.py  test_google_adapter.py  test_health_archive_export.py  test_location.py  test_locking.py  test_meta_adapter.py  test_openai_adapter.py  test_storage.py  test_workday_adapters.py
tests/fixtures/: google_detail.html  google_search.html  openai_jobs.json
