[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-job-monitor"
version = "0.1.0"
description = "Deterministic local monitor for official company job postings"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
jobs-monitor = "job_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
